--- a/scss/_page-match.scss
+++ b/scss/_page-match.scss
@@ -1265,3 +1265,442 @@
     }
   }
 }
+
+.visual-match-wrapper {
+  width: 100%;
+  height: 576px;
+  background-image: url('../images/visual-match-background-pc.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  display: flex;
+
+  @include mq(max_md) {
+    width: 100%;
+    height: 782px;
+    background-image: url('../images/visual-match-background-mb.png');
+    flex-direction: column;
+
+  }
+
+  .visual-club-wrapper {
+    width: 50%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+
+    @include mq(max_md) {
+      width: 100%;
+      height: 50%;
+      flex-direction: column-reverse;
+    }
+
+    &:last-of-type {
+      @include mq(max_md) {
+        flex-direction: column;
+      }
+    }
+
+    .visual-club {
+      flex-grow: 1;
+      position: relative;
+    }
+
+    .visual-row {
+      width: 48px;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      flex-direction: column;
+
+      @include mq(max_md) {
+        width: 100%;
+        height: 48px;
+        flex-direction: row;
+      }
+    }
+
+    .visual-club-1 {
+      .visual-row-1 {
+        top: 0;
+        left: 64px;
+
+        @include mq(max_md) {
+          top: 10px;
+          left: 0;
+        }
+      }
+
+      .visual-row-2 {
+        top: 0;
+        left: 160px;
+
+        @include mq(max_md) {
+          top: 75px;
+          left: 0;
+        }
+      }
+      .visual-row-3 {
+        top: 0;
+        left: 275px;
+
+        @include mq(max_md) {
+          top: 157px;
+          left: 0;
+        }
+      }
+
+      .visual-row-4 {
+        top: 0;
+        left: 385px;
+
+        @include mq(max_md) {
+          top: 240px;
+          left: 0;
+        }
+      }
+
+    }
+
+    .visual-club-2 {
+      .visual-row-1 {
+        top: 0;
+        right: 64px;
+
+        @include mq(max_md) {
+          top: 80%;
+          right: 0;
+        }
+      }
+
+      .visual-row-2 {
+        top: 0;
+        right: 160px;
+
+        @include mq(max_md) {
+          top: 55%;
+          right: 0
+        }
+      }
+      .visual-row-3 {
+        top: 0;
+        right: 275px;
+
+        @include mq(max_md) {
+          top: 30%;
+          right: 0
+        }
+      }
+
+      .visual-row-4 {
+        top: 0;
+        right: 385px;
+
+        @include mq(max_md) {
+          top: 10px;
+          right: 0;
+        }
+      }
+
+    }
+
+    .player-wrapper {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .number {
+        width: 32px;
+        height: 32px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
+        text-align: center;
+        color: #FFFFFF;
+        margin-bottom: 4px;
+        border-radius: 50%;
+      }
+
+      .player-name {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 14px;
+        text-align: center;
+        color: #1A202C;
+        word-wrap: break-word;
+
+        @include mq(max_md) {
+          font-weight: 500;
+          font-size: 11px;
+          line-height: 13px;
+          text-align: center;
+          max-width: 48px;
+          word-break: break-all;
+        }
+      }
+    }
+
+
+
+    .club-info {
+      width: 100%;
+      height: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0px 36px 12px 18px;
+    }
+
+    .club-info-1 {
+      @include mq(max_md) {
+        padding: 16px 12px;
+      }
+    }
+
+    .club-info-2 {
+      @include mq(max_md) {
+        padding: 16px 12px;
+      }
+    }
+
+    .info-wrapper {
+      display: flex;
+      flex-direction: column;
+
+
+      .club-name {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        /* identical to box height */
+
+
+        /* Gray:900 */
+
+        color: #1A202C;
+        margin-bottom: 4px;
+      }
+
+      .detail {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        /* identical to box height */
+
+
+        /* Gray:900 */
+
+        color: #1A202C;
+      }
+    }
+
+
+    .info {
+      background: #3AC5C9;
+    }
+
+    .primary {
+      background: #313955;
+    }
+    .score {
+      padding: 10px;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 17px;
+      /* identical to box height */
+
+      text-align: center;
+
+      color: #FFFFFF;
+      border-radius: 8px;
+    }
+  }
+}
+
+
+.list-match-player {
+  margin: 20px 0px;
+  display: flex;
+
+  @include mq(max_md) {
+    flex-direction: column;
+  }
+
+  .list-player-wrapper {
+    flex-grow: 1;
+
+    @include mq(max_md) {
+      width: 100%;
+    }
+  }
+
+  .middle {
+    min-width: 85px;
+    max-width: 85px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .dash {
+      width: 1px;
+      height: 100%;
+      border: none;
+      background: #E2E8F0;
+    }
+
+    @include mq(max_md) {
+      display: none;
+    }
+  }
+  .top-list-player {
+    margin-bottom: 12px;
+  }
+
+  .club-wrapper {
+    display: flex;
+    align-items: center;
+
+    .club-image {
+      min-width: 40px;
+      max-width: 40px;
+      ;
+      height: 40px;
+      ;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-right: 16px;
+    }
+
+    .club-name {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 19px;
+
+      @include mq(max_md) {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 100%;
+        display: inline-block;
+      }
+    }
+  }
+
+  .list-player {
+    .player-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 8px;
+      .avatar-user {
+        min-width: 40px;
+        max-width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-right: 16px;
+      }
+
+      .user-info-wrapper {
+        flex-grow: 1;
+        padding: 8px 0px;
+        border-bottom: 1px solid #EDF2F7;
+        display: flex;
+        flex-direction: column;
+
+        .username {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 17px;
+          color: #1A202C;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          margin-bottom: 4px;
+        }
+
+        .major {
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 17px;
+          /* identical to box height */
+
+
+          /* Gray:600 */
+
+          color: #718096;
+          display: flex;
+
+          .icon {
+            width: 16px;
+            height: 16px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 4px;
+          }
+
+        }
+      }
+
+
+    }
+  }
+
+  .miss-player-label {
+    padding: 24px 0px;
+    position: relative;
+    z-index: 9999;
+    width: 463px;
+    height: auto;
+    text-align: center;
+    background-color: #fff;
+    top: 0;
+    left: 60%;
+    font-style: normal;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 17px;
+      /* identical to box height */
+
+      text-align: center;
+
+      /* Gray:900 */
+
+      color: #1A202C;
+
+
+    @include mq(max_md) {
+      padding: 16px 0px 20px 0px;
+      text-align: left;
+      position: static;
+    width: 100%;
+    height: auto;
+    background-color: #fff;
+    top: 0;
+    left: 0;
+    text-align: left;
+    }
+  }
+
+  .miss-player-label-2  {
+    visibility: hidden;
+
+    @include mq(max_md) {
+      visibility: visible;
+    }
+  }
+}
