--- a/css/account.css
+++ b/css/account.css
@@ -1,218 +1,334 @@
 .account-page-wrapper {
-  width: 100%;
-  height: auto;
-  padding-top: 12px;
+  padding: 16px 0px 24px 0px;
 }
-.account-page-wrapper .list-category {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  margin-bottom: 60px;
+.account-page-wrapper .title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #1A202C;
+  margin-bottom: 19px;
 }
 @media only screen and (max-width: 991px) {
-  .account-page-wrapper .list-category {
-    margin-bottom: 30px;
+  .account-page-wrapper .title {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 10px;
   }
 }
-.account-page-wrapper .list-category li a {
-  text-decoration: none;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  color: #1A202C;
-}
-.account-page-wrapper .list-category li a:hover {
-  text-decoration: underline;
-}
-.account-page-wrapper .account-info-wrapper {
+.account-page-wrapper .account-header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: #FFFFFF;
+  margin: 16px 0px;
+  border: 1px solid #E2E8F0;
+  border-radius: 8px;
+  padding: 24px;
 }
 @media only screen and (max-width: 991px) {
-  .account-page-wrapper .account-info-wrapper {
+  .account-page-wrapper .account-header {
     flex-direction: column;
-    margin-bottom: 20px;
     align-items: flex-start;
-    gap: 12px;
+    padding: 16px;
+    margin: 12px 0px;
   }
 }
-.account-page-wrapper .account-info-wrapper .account-info {
+.account-page-wrapper .user-info-wrapper {
   display: flex;
   align-items: center;
-  gap: 24px;
+}
+.account-page-wrapper .user-info-wrapper .btn-upload {
+  position: relative;
+  width: 144px;
+  height: 144px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0;
+  transition: 0.2s;
+  cursor: pointer;
+  overflow: hidden;
+  background-color: #EDF2F7;
 }
 @media only screen and (max-width: 991px) {
-  .account-page-wrapper .account-info-wrapper .account-info {
-    gap: 12px;
+  .account-page-wrapper .user-info-wrapper .btn-upload {
+    width: 80px;
+    height: 80px;
   }
 }
-.account-page-wrapper .account-info-wrapper .account-info .account-image {
+.account-page-wrapper .user-info-wrapper .btn-upload input[type=file] {
+  cursor: pointer;
+  position: absolute;
+  left: 0%;
+  top: 0%;
+  transform: scale(3);
+  opacity: 0;
   display: block;
+  width: 100%;
+  height: 100%;
+}
+.account-page-wrapper .user-info-wrapper .user-avatar {
   min-width: 80px;
   max-width: 80px;
   height: 80px;
   border: none;
   border-radius: 50%;
-  object-fit: cover;
+  margin-right: 24px;
 }
-@media only screen and (max-width: 991px) {
-  .account-page-wrapper .account-info-wrapper .account-info .account-image {
-    min-width: 40px;
-    max-width: 40px;
-    height: 40px;
-  }
-}
-.account-page-wrapper .account-info-wrapper .account-info .account-description {
+.account-page-wrapper .user-info-wrapper .info-detail {
+  width: fit-content;
   display: flex;
   flex-direction: column;
-  gap: 0;
 }
-.account-page-wrapper .account-info-wrapper .account-info .account-description .account-name {
+.account-page-wrapper .user-info-wrapper .info-detail .username {
   margin: 0;
   padding: 0;
   font-style: normal;
   font-weight: 500;
   font-size: 32px;
-  line-height: 48px;
+  line-height: 38px;
+  /* identical to box height */
+  /* Gray:900 */
   color: #1A202C;
 }
 @media only screen and (max-width: 991px) {
-  .account-page-wrapper .account-info-wrapper .account-info .account-description .account-name {
+  .account-page-wrapper .user-info-wrapper .info-detail .username {
+    font-weight: 500;
     font-size: 24px;
-    line-height: 32px;
+    line-height: 28px;
   }
 }
-.account-page-wrapper .account-info-wrapper .account-info .account-description .email {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  color: #1A202C;
-}
-.account-page-wrapper .account-info-wrapper .list-control {
-  display: flex;
-  gap: 16px;
-}
-.account-page-wrapper .account-info-wrapper .list-control .btn {
-  cursor: pointer;
-  padding: 6px 10px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 21px;
-  color: #461A53;
-  background-color: #fff;
-  border: 1px solid #461A53;
-  border-radius: 8px;
-}
-.account-page-wrapper .account-info-wrapper .list-control .btn:focus {
-  outline: none;
-}
-.account-page-wrapper .account-title {
-  font-style: normal;
-  font-weight: 550;
-  font-size: 16px;
-  line-height: 24px;
-  color: #1A202C;
+.account-page-wrapper .user-info-wrapper .info-detail .line {
   margin: 0;
   padding: 0;
-  margin-bottom: 16px;
-  margin-top: 40px;
+  display: flex;
+  margin-bottom: 8px;
+  align-items: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #1A202C;
+}
+.account-page-wrapper .user-info-wrapper .info-detail .expiration-date {
+  display: inline-block;
+  padding: 8px 10px;
+  background: #F1516E;
+  border-radius: 8px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+  color: #FFFFFF;
+  margin-right: 16px;
+}
+.account-page-wrapper .user-info-wrapper .info-detail .renew-plan {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+  /* Gray:900 */
+  color: #1A202C;
+}
+.account-page-wrapper .user-info-wrapper .info-detail .txt-link {
+  text-decoration: none;
+  color: #3AC5C9;
+}
+.account-page-wrapper .user-info-wrapper .info-detail .txt-link:hover {
+  text-decoration: none;
+}
+.account-page-wrapper .transaction-wrapper {
+  background: #FFFFFF;
+  border: 1px solid #E2E8F0;
+  padding: 24px;
+  min-width: 100%;
+  max-width: 100%;
+  background: #FFFFFF;
+  /* Gray:300 */
+  border: 1px solid #E2E8F0;
+  border-radius: 8px;
+  max-width: auto;
 }
 @media only screen and (max-width: 991px) {
-  .account-page-wrapper .account-title {
-    font-size: 14px;
-    line-height: 21px;
-    margin-bottom: 12px;
-    margin-top: 20px;
+  .account-page-wrapper .transaction-wrapper {
+    padding: 16px;
+    min-width: 100%;
+    max-width: 100%;
+    margin-left: 0;
   }
 }
-.account-page-wrapper .table-content {
-  width: 100%;
-}
-.account-page-wrapper .table-content .column-30 {
-  width: 33.3333333333%;
-}
-.account-page-wrapper .table-content .column-50 {
-  width: 50%;
-}
-.account-page-wrapper .table-content .text-left {
-  text-align: left;
-}
-.account-page-wrapper .table-content .text-center {
-  text-align: center;
-}
-.account-page-wrapper .table-content .text-right {
-  text-align: right;
-}
-.account-page-wrapper .table-content .text-strong {
+.account-page-wrapper .transaction-wrapper .transaction-title {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   color: #1A202C;
+  margin-bottom: 12px;
 }
-.account-page-wrapper .table-content .table-row {
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper .transaction-wrapper .transaction-title {
+    font-size: 14px;
+    line-height: 21px;
+    margin-bottom: 8px;
+  }
+}
+.account-page-wrapper .transaction-wrapper .list-transaction {
   width: 100%;
-  display: flex;
-  align-items: center;
-  padding: 12px 32px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
+  margin-right: 76px;
+  overflow-x: scroll;
+  max-width: 1000%;
+}
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper .transaction-wrapper .list-transaction {
+    margin-right: 0;
+  }
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-heading {
+  background-color: #EDF2F7;
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-heading .column-item {
+  color: #718096 !important;
+  font-size: 14px !important;
   line-height: 21px;
-  color: #1A202C;
+}
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper .transaction-wrapper .list-transaction .table-heading {
+    min-width: max-content;
+  }
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row {
+  display: flex;
+  border-top: 1px solid #EDF2F7;
+  padding: 10px 12px;
+  padding-right: 0;
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row:last-of-type {
   border-bottom: 1px solid #EDF2F7;
 }
 @media only screen and (max-width: 991px) {
-  .account-page-wrapper .table-content .table-row {
-    padding: 6px 16px;
+  .account-page-wrapper .transaction-wrapper .list-transaction .table-row {
+    padding: 6px 8px;
   }
 }
-.account-page-wrapper .pagination {
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item {
+  width: 16.6666666667%;
+  font-style: normal;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  /* identical to box height */
+  /* Gray:900 */
+  color: #1A202C;
+  min-width: max-content;
+  text-align: left;
   display: flex;
-  justify-content: flex-end;
-  gap: 8px;
   align-items: center;
-  margin-top: 24px;
 }
 @media only screen and (max-width: 991px) {
-  .account-page-wrapper .pagination {
-    margin-top: 12px;
+  .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item {
+    font-size: 14px;
+    line-height: 21px;
   }
 }
-.account-page-wrapper .pagination .pagination-item {
-  min-width: 32px;
-  max-width: 32px;
-  height: 32px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  color: #1A202C;
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(2), .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(3) {
+  width: 15%;
 }
-.account-page-wrapper .pagination .pagination-item:focus {
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(2), .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(3) {
+    min-width: 120px;
+  }
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(1), .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(4), .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(5), .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(6) {
+  width: 20%;
+}
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(1), .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(4), .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(5), .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(6) {
+    min-width: 240px;
+  }
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(6) {
+  width: 15% !important;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 24px;
+}
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(6) {
+    min-width: 120px;
+  }
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row .column-item:nth-of-type(1) {
+  justify-content: flex-start !important;
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row .btn-view-transaction {
+  min-width: 58px;
+  height: auto;
+  padding: 8px 12px;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  /* identical to box height */
+  text-align: center;
+  /* #313955 */
+  color: #313955;
+  background: #3AC5C9;
+  border-radius: 4px;
+  font-family: "Rubik";
+}
+.account-page-wrapper .transaction-wrapper .list-transaction .table-row .btn-view-transaction:focus {
   outline: none;
 }
-.account-page-wrapper .pagination .active {
-  background: #461A53;
-  color: #fff;
+.account-page-wrapper .list-btn {
+  display: flex;
 }
-.account-page-wrapper .pagination .disabled {
-  opacity: 0.65;
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper .list-btn {
+    margin-top: 16px;
+  }
 }
-.account-page-wrapper .pagination .btn-prev {
-  transform: rotate(180deg);
+.account-page-wrapper .list-btn .btn-view {
+  font-weight: 500;
+  background-color: transparent;
+  margin-right: 16px;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  /* identical to box height */
+  /* #313955 */
+  color: #313955;
+  padding: 6px 10px;
+  background: #FFFFFF;
+  /* #313955 */
+  border: 1px solid #313955;
+  border-radius: 8px;
+}
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper .list-btn .btn-view {
+    margin-bottom: 0;
+  }
+}
+.account-page-wrapper .list-btn .btn-view:last-of-type {
+  margin-right: 0;
+}
+@media only screen and (max-width: 991px) {
+  .account-page-wrapper {
+    padding-top: 23px;
+  }
 }
 
 /*# sourceMappingURL=account.css.map */
