--- a/scss/_page-price.scss
+++ b/scss/_page-price.scss
@@ -603,6 +603,10 @@
     }
   }
 
+  .select-payment  {
+    border-radius: 8px 0px 0px 8px !important;
+  }
+
   .icon {
     display: flex;
     width: 24px;
